fixed javafx plugin